[gd_scene load_steps=6 format=3 uid="uid://bk6xirfxm5g0m"]

[ext_resource type="Script" path="res://levels/MainMenu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dc01qx7uo34s6" path="res://img/background_gray.png" id="2"]
[ext_resource type="Theme" uid="uid://ehwqj083d4h" path="res://theme/general_theme.tres" id="3_ijyx1"]

[sub_resource type="GDScript" id="1"]
script/source = "extends Button

@onready var game_controller = get_node(\"/root/World\")

func _ready():
	pressed.connect(on_click)

func on_click():
	game_controller.go_to_level_selection()

"

[sub_resource type="GDScript" id="2"]
script/source = "extends Button

func _ready():
	pressed.connect(on_click)

func on_click():
	get_tree().quit()
"

[node name="MainMenu" type="Node2D"]
script = ExtResource("1")

[node name="background_blue" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-1, 0)
texture = ExtResource("2")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_top = 120.0
offset_right = 1080.0
offset_bottom = 417.0
theme = ExtResource("3_ijyx1")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Ting Ting"

[node name="ChooseLevelBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Choose Level"
script = SubResource("1")

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"
script = SubResource("2")

[connection signal="pressed" from="VBoxContainer/ChooseLevelBtn" to="." method="_on_ChooseLevelBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
